# SimpleType

./: .gitignore  AGENTS.md  BUID_WITH_WHISPER.md  CLAUDE.md  SHERPA_ONNX.md  product-spec.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/phucngu/simpletype/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/dictionaries/: en.txt  vi.txt
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/dev/phucngu/simpletype/gesture/: GestureCommit.kt  GestureDecoder.kt  GestureDictionary.kt  GestureGeometry.kt
app/src/main/java/dev/phucngu/simpletype/ime/: ClipboardAdapter.kt  ClipboardHistoryManager.kt  HapticPlayer.kt  InputConnectionTextEditor.kt  Keyboard.kt  KeyboardMetrics.kt  KeyboardScreen.kt  LatinKeyboard.kt  LatinKeyboardView.kt  SimpleTypeIME.kt  VoiceStatusStrings.kt
app/src/main/java/dev/phucngu/simpletype/ime/keyboard/layout/: LayoutFactory.kt  NumericKeyboardLayout.kt  QwertyKeyboardLayout.kt  SymbolKeyboardLayout.kt
app/src/main/java/dev/phucngu/simpletype/ime/keyboard/model/: Keyboard.kt
app/src/main/java/dev/phucngu/simpletype/ime/keyboard/selection/: KeyboardLayoutSelector.kt
app/src/main/java/dev/phucngu/simpletype/text/: TelexEngine.kt
app/src/main/java/dev/phucngu/simpletype/ui/: MicPermissionActivity.kt  SettingsActivity.kt
app/src/main/java/dev/phucngu/simpletype/ui/theme/: Theme.kt
app/src/main/java/dev/phucngu/simpletype/voice/: AsrEngine.kt  CommandMatcher.kt  ModelManager.kt  NoopAsrEngine.kt  SherpaAsrEngine.kt  SherpaAudio.kt  TextEditor.kt  Vad.kt  VoiceCommandHandler.kt  VoiceInputController.kt  VoskAsrEngine.kt  VoskResult.kt  WhisperAsrEngine.kt  WhisperLib.kt
app/src/main/res/drawable/: bg_clipboard_item.xml  bg_kb_circle.xml  bg_kb_mic.xml  bg_kb_root.xml  bg_settings_card.xml  bg_settings_logo.xml  bg_settings_status.xml  bg_try_field.xml  ic_kb_backspace.xml  ic_kb_clipboard.xml  ic_kb_close.xml  ic_kb_emoji.xml  ic_kb_enter.xml  ic_kb_globe.xml  ic_kb_hide.xml  ic_kb_language.xml  ic_kb_menu.xml  ic_kb_mic.xml  ic_kb_pin.xml  ic_kb_settings.xml  ic_kb_shift.xml  ic_kb_shift_lock.xml  ic_kb_stop.xml  seek_tick.xml
app/src/main/res/layout/: activity_settings.xml  item_clipboard.xml  item_clipboard_header.xml  keyboard_view.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: method.xml
app/src/test/java/dev/phucngu/simpletype/: ExampleUnitTest.kt
app/src/test/java/dev/phucngu/simpletype/gesture/: GestureCommitTest.kt  GestureDecoderTest.kt  VerticalFlickTest.kt  VietnameseGlideTest.kt
app/src/test/java/dev/phucngu/simpletype/ime/: AutoCapitalizeTest.kt  ClipboardHistoryManagerTest.kt  HermesTelexIntegrationTest.kt  KeyboardKeySizeTest.kt  KeyboardLabelTest.kt  KeyboardLayoutTest.kt  KeyboardMetricsTest.kt  KeyboardMultiTouchTest.kt  KeyboardViewMetricsTest.kt  NumericKeyboardInputTest.kt  ShiftDeleteTest.kt  TelexContextPickupTest.kt  TelexCursorMoveTest.kt  TerminalTelexTest.kt  VoiceStatusStringsTest.kt
app/src/test/java/dev/phucngu/simpletype/text/: TelexEngineTest.kt
app/src/test/java/dev/phucngu/simpletype/voice/: CommandMatcherTest.kt  SherpaAudioTest.kt  VoiceCommandHandlerTest.kt  VoskResultTest.kt
docs/: glide-typing.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
redesign-m3expressive/: .thumbnail  Clipboard.dc.html  ClipboardM3.dc.html  Keyboard Redesign M3 Expressive.dc.html  Keyboard Redesign.dc.html  Keyboard.dc.html  KeyboardM3.dc.html  SettingsM3.dc.html  SettingsScreen.dc.html
scripts/: fetch-sherpa-onnx-aar.sh  fetch-sherpa-vi-model.sh
tools/: generate_gesture_dictionary.py  vi-local-words.txt
whisper/: README.md  build-phowhisper-ggml.sh
